update notebook file

--- a/Torneos_Primera_Division_analytics.ipynb
+++ b/Torneos_Primera_Division_analytics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5ErgeHh7nY4VHddokl/AO",
+      "authorship_tag": "ABX9TyMXVNg5s6FxG3Azrq4d1nkI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jK4TejoIthR5",
-        "outputId": "5de63070-0852-4151-af8b-a59565deff47"
+        "outputId": "4af09256-85ae-495e-a409-bb56d298e4f1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: gspread==3.6 in /usr/local/lib/python3.10/dist-packages (3.6.0)\n",
+            "Collecting gspread==3.6\n",
+            "  Downloading gspread-3.6.0-py3-none-any.whl (26 kB)\n",
             "Requirement already satisfied: requests>=2.2.1 in /usr/local/lib/python3.10/dist-packages (from gspread==3.6) (2.31.0)\n",
             "Requirement already satisfied: google-auth>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from gspread==3.6) (2.17.3)\n",
             "Requirement already satisfied: google-auth-oauthlib>=0.4.1 in /usr/local/lib/python3.10/dist-packages (from gspread==3.6) (1.0.0)\n",
@@ -55,7 +56,13 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.2.1->gspread==3.6) (2.0.7)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.2.1->gspread==3.6) (2023.7.22)\n",
             "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in /usr/local/lib/python3.10/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=1.12.0->gspread==3.6) (0.5.0)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread==3.6) (3.2.2)\n"
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread==3.6) (3.2.2)\n",
+            "Installing collected packages: gspread\n",
+            "  Attempting uninstall: gspread\n",
+            "    Found existing installation: gspread 3.4.2\n",
+            "    Uninstalling gspread-3.4.2:\n",
+            "      Successfully uninstalled gspread-3.4.2\n",
+            "Successfully installed gspread-3.6.0\n"
           ]
         }
       ],
@@ -74,7 +81,7 @@
       "metadata": {
         "id": "7fjubwwGtpzN"
       },
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,15 +97,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "demaMdg0t1gU",
-        "outputId": "e108d762-130c-406f-a474-a12a689ce156"
+        "outputId": "0e15c06c-9472-4bc3-b228-0d148a0ab8b2"
       },
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Mounted at /content/drive\n",
             "['client_secret_2_3384657644-o03i4l3u9vddiv6n1h51qg6i0h8s1omf.apps.googleusercontent.com.json', 'centered-flow-368315-68e92ed40d61.json']\n"
           ]
         }
@@ -118,7 +125,7 @@
       "metadata": {
         "id": "mukVEHOquY0f"
       },
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -131,7 +138,7 @@
       "metadata": {
         "id": "cjI_Aqiyu-WU"
       },
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -145,9 +152,9 @@
           "height": 293
         },
         "id": "ITnOrkubvu8C",
-        "outputId": "1b87713e-f8b0-4168-9759-01985ee79895"
+        "outputId": "9d05b094-3791-43c6-ae9c-d79c8cde2b88"
       },
-      "execution_count": 26,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +183,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bfd36857-ba77-454f-88da-7e0f5a02df5d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3f5641b5-c560-4e7c-b237-efc2de133bc4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -267,7 +274,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bfd36857-ba77-454f-88da-7e0f5a02df5d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3f5641b5-c560-4e7c-b237-efc2de133bc4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -319,12 +326,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bfd36857-ba77-454f-88da-7e0f5a02df5d button.colab-df-convert');\n",
+              "        document.querySelector('#df-3f5641b5-c560-4e7c-b237-efc2de133bc4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bfd36857-ba77-454f-88da-7e0f5a02df5d');\n",
+              "        const element = document.querySelector('#df-3f5641b5-c560-4e7c-b237-efc2de133bc4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -344,8 +351,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e0972e53-bffa-47a7-ba23-4949194cfa80\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e0972e53-bffa-47a7-ba23-4949194cfa80')\"\n",
+              "<div id=\"df-baf14d29-4bd7-468f-88ca-fbc54158e0b5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-baf14d29-4bd7-468f-88ca-fbc54158e0b5')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -464,7 +471,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e0972e53-bffa-47a7-ba23-4949194cfa80 button');\n",
+              "        document.querySelector('#df-baf14d29-4bd7-468f-88ca-fbc54158e0b5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -475,7 +482,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 6
         }
       ]
     },
@@ -490,24 +497,24 @@
           "height": 206
         },
         "id": "24RHgrUqvxvy",
-        "outputId": "3ad4d305-03a1-42b7-8061-f5c3a9eec293"
+        "outputId": "14fc0e48-a8d4-4b70-dc47-8ec9547357fd"
       },
-      "execution_count": 27,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                     nombre_torneo        nombre  cant_goles equipo\n",
-              "0  Liga Profesional Argentina 2017  D. Benedetto          21    BOC\n",
-              "1  Liga Profesional Argentina 2017    S. Driussi          17    RIV\n",
-              "2  Liga Profesional Argentina 2017       J. Sand          15    LAN\n",
-              "3  Liga Profesional Argentina 2017     M. Pavone          13    VEL\n",
-              "4  Liga Profesional Argentina 2017     I. Scocco          12    NOB"
+              "                     nombre_torneo        nombre  cant_goles           equipo\n",
+              "0  Liga Profesional Argentina 2017  D. Benedetto          21     Boca Juniors\n",
+              "1  Liga Profesional Argentina 2017    S. Driussi          17      River Plate\n",
+              "2  Liga Profesional Argentina 2017       J. Sand          15            Lanús\n",
+              "3  Liga Profesional Argentina 2017     M. Pavone          13  Vélez Sarsfield\n",
+              "4  Liga Profesional Argentina 2017     I. Scocco          12           Newell"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6c800c26-98dd-4d72-b623-00308b0d4b54\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a32adb60-b926-434a-b9ce-ada30cfceb60\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -538,35 +545,35 @@
               "      <td>Liga Profesional Argentina 2017</td>\n",
               "      <td>D. Benedetto</td>\n",
               "      <td>21</td>\n",
-              "      <td>BOC</td>\n",
+              "      <td>Boca Juniors</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Liga Profesional Argentina 2017</td>\n",
               "      <td>S. Driussi</td>\n",
               "      <td>17</td>\n",
-              "      <td>RIV</td>\n",
+              "      <td>River Plate</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Liga Profesional Argentina 2017</td>\n",
               "      <td>J. Sand</td>\n",
               "      <td>15</td>\n",
-              "      <td>LAN</td>\n",
+              "      <td>Lanús</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Liga Profesional Argentina 2017</td>\n",
               "      <td>M. Pavone</td>\n",
               "      <td>13</td>\n",
-              "      <td>VEL</td>\n",
+              "      <td>Vélez Sarsfield</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>Liga Profesional Argentina 2017</td>\n",
               "      <td>I. Scocco</td>\n",
               "      <td>12</td>\n",
-              "      <td>NOB</td>\n",
+              "      <td>Newell</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -574,7 +581,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c800c26-98dd-4d72-b623-00308b0d4b54')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a32adb60-b926-434a-b9ce-ada30cfceb60')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -626,12 +633,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6c800c26-98dd-4d72-b623-00308b0d4b54 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a32adb60-b926-434a-b9ce-ada30cfceb60 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6c800c26-98dd-4d72-b623-00308b0d4b54');\n",
+              "        const element = document.querySelector('#df-a32adb60-b926-434a-b9ce-ada30cfceb60');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -651,8 +658,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2d1ea0cb-31c3-488e-bf79-9d95952f9088\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2d1ea0cb-31c3-488e-bf79-9d95952f9088')\"\n",
+              "<div id=\"df-762c9b6d-361f-4c7b-b168-864d5c0abf22\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-762c9b6d-361f-4c7b-b168-864d5c0abf22')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -771,7 +778,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2d1ea0cb-31c3-488e-bf79-9d95952f9088 button');\n",
+              "        document.querySelector('#df-762c9b6d-361f-4c7b-b168-864d5c0abf22 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -782,7 +789,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 7
         }
       ]
     },
@@ -797,9 +804,9 @@
           "height": 206
         },
         "id": "7mIZILjOvzcT",
-        "outputId": "1b3fd7b2-4c63-4e03-99da-d4e9525e8b56"
+        "outputId": "71aa441c-f718-45fc-acd6-79159e58d194"
       },
-      "execution_count": 28,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +821,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f3c0abe7-7d6b-4afc-90cd-eb9d1e5064b3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-791bd756-87b5-4c7c-bf4a-527b1b3c1043\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -893,7 +900,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f3c0abe7-7d6b-4afc-90cd-eb9d1e5064b3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-791bd756-87b5-4c7c-bf4a-527b1b3c1043')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -945,12 +952,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f3c0abe7-7d6b-4afc-90cd-eb9d1e5064b3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-791bd756-87b5-4c7c-bf4a-527b1b3c1043 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f3c0abe7-7d6b-4afc-90cd-eb9d1e5064b3');\n",
+              "        const element = document.querySelector('#df-791bd756-87b5-4c7c-bf4a-527b1b3c1043');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -970,8 +977,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-622f87bb-341f-42a1-84fa-2797546fb421\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-622f87bb-341f-42a1-84fa-2797546fb421')\"\n",
+              "<div id=\"df-a903e364-3754-4661-846a-ae569ad1f89b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a903e364-3754-4661-846a-ae569ad1f89b')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1090,7 +1097,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-622f87bb-341f-42a1-84fa-2797546fb421 button');\n",
+              "        document.querySelector('#df-a903e364-3754-4661-846a-ae569ad1f89b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1101,9 +1108,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive.flush_and_unmount()"
+      ],
+      "metadata": {
+        "id": "xZrhBYQdrnlO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
