--- a/ETL/ETL_Torneos_Primera_Division_(SQL).ipynb
+++ b/ETL/ETL_Torneos_Primera_Division_(SQL).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -15,8 +15,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
+      "cannot find .env file\n"
      ]
     }
    ],
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "id": "sfgeoGkn6Yd-"
    },
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "id": "y0i62ykJ61ea"
    },
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "id": "mWjemb1ODlA6"
    },
@@ -196,7 +195,7 @@
        "4  https://www.resultados-futbol.com/primera_divi...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "id": "E8YeuprM67Jo"
    },
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "id": "4f1MFbt5enNO"
    },
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "id": "m1qqhRLUm0nH"
    },
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "id": "jJBqEY-4Vlp1"
    },
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "id": "kggJ5cGPkSA5"
    },
@@ -458,34 +457,34 @@
        "      <th>2701</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
        "      <td>Jornada 14</td>\n",
-       "      <td>26 Nov 23</td>\n",
+       "      <td>27 Nov 23</td>\n",
        "      <td>San Lorenzo</td>\n",
-       "      <td>x - x</td>\n",
+       "      <td>2 - 0</td>\n",
        "      <td>Central Córdoba</td>\n",
-       "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2702</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
        "      <td>Jornada 14</td>\n",
-       "      <td>26 Nov 23</td>\n",
+       "      <td>28 Nov 23</td>\n",
        "      <td>Newell's Old Boys</td>\n",
-       "      <td>x - x</td>\n",
+       "      <td>3 - 0</td>\n",
        "      <td>Defensa y Justicia</td>\n",
-       "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2703</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
        "      <td>Jornada 14</td>\n",
-       "      <td>26 Nov 23</td>\n",
+       "      <td>27 Nov 23</td>\n",
        "      <td>Godoy Cruz</td>\n",
-       "      <td>x - x</td>\n",
+       "      <td>1 - 2</td>\n",
        "      <td>Boca Juniors</td>\n",
-       "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2704</th>\n",
@@ -493,21 +492,21 @@
        "      <td>Jornada 14</td>\n",
        "      <td>26 Nov 23</td>\n",
        "      <td>River Plate</td>\n",
-       "      <td>x - x</td>\n",
+       "      <td>0 - 0</td>\n",
        "      <td>Instituto</td>\n",
-       "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2705</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
        "      <td>Jornada 14</td>\n",
-       "      <td>26 Nov 23</td>\n",
+       "      <td>25 Nov 23</td>\n",
        "      <td>Platense</td>\n",
-       "      <td>x - x</td>\n",
+       "      <td>1 - 0</td>\n",
        "      <td>Sarmiento</td>\n",
-       "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -522,11 +521,11 @@
        "3          Liga Profesional Argentina 2017   Jornada 1     28 Ago 16   \n",
        "4          Liga Profesional Argentina 2017   Jornada 1     27 Ago 16   \n",
        "...                                    ...         ...           ...   \n",
-       "2701  Copa Liga Profesional Argentina 2023  Jornada 14     26 Nov 23   \n",
-       "2702  Copa Liga Profesional Argentina 2023  Jornada 14     26 Nov 23   \n",
-       "2703  Copa Liga Profesional Argentina 2023  Jornada 14     26 Nov 23   \n",
+       "2701  Copa Liga Profesional Argentina 2023  Jornada 14     27 Nov 23   \n",
+       "2702  Copa Liga Profesional Argentina 2023  Jornada 14     28 Nov 23   \n",
+       "2703  Copa Liga Profesional Argentina 2023  Jornada 14     27 Nov 23   \n",
        "2704  Copa Liga Profesional Argentina 2023  Jornada 14     26 Nov 23   \n",
-       "2705  Copa Liga Profesional Argentina 2023  Jornada 14     26 Nov 23   \n",
+       "2705  Copa Liga Profesional Argentina 2023  Jornada 14     25 Nov 23   \n",
        "\n",
        "           equipo_local resultado     equipo_visitante equipo_local_resultado  \\\n",
        "0              Aldosivi     0 - 2                Colón                      0   \n",
@@ -535,11 +534,11 @@
        "3           San Lorenzo     2 - 2  San Martín San Juan                      2   \n",
        "4       Rosario Central     0 - 0   Defensa y Justicia                      0   \n",
        "...                 ...       ...                  ...                    ...   \n",
-       "2701        San Lorenzo     x - x      Central Córdoba                      x   \n",
-       "2702  Newell's Old Boys     x - x   Defensa y Justicia                      x   \n",
-       "2703         Godoy Cruz     x - x         Boca Juniors                      x   \n",
-       "2704        River Plate     x - x            Instituto                      x   \n",
-       "2705           Platense     x - x            Sarmiento                      x   \n",
+       "2701        San Lorenzo     2 - 0      Central Córdoba                      2   \n",
+       "2702  Newell's Old Boys     3 - 0   Defensa y Justicia                      3   \n",
+       "2703         Godoy Cruz     1 - 2         Boca Juniors                      1   \n",
+       "2704        River Plate     0 - 0            Instituto                      0   \n",
+       "2705           Platense     1 - 0            Sarmiento                      1   \n",
        "\n",
        "     equipo_visitante_resultado  \n",
        "0                             2  \n",
@@ -548,16 +547,16 @@
        "3                             2  \n",
        "4                             0  \n",
        "...                         ...  \n",
-       "2701                          x  \n",
-       "2702                          x  \n",
-       "2703                          x  \n",
-       "2704                          x  \n",
-       "2705                          x  \n",
+       "2701                          0  \n",
+       "2702                          0  \n",
+       "2703                          2  \n",
+       "2704                          0  \n",
+       "2705                          0  \n",
        "\n",
        "[2706 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "id": "ymwVewRJkROh"
    },
@@ -634,9 +633,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Liga Profesional Argentina 2017</td>\n",
-       "      <td>Lucas Alario</td>\n",
+       "      <td>I. Scocco</td>\n",
        "      <td>12</td>\n",
-       "      <td>River Plate</td>\n",
+       "      <td>Newell</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -655,16 +654,16 @@
        "    <tr>\n",
        "      <th>76</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
-       "      <td>S. Rondón</td>\n",
-       "      <td>5</td>\n",
-       "      <td>River Plate</td>\n",
+       "      <td>S. Castro</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Vélez Sarsfield</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
-       "      <td>S. Castro</td>\n",
+       "      <td>M. Giménez</td>\n",
        "      <td>5</td>\n",
-       "      <td>Vélez Sarsfield</td>\n",
+       "      <td>Independiente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
@@ -691,11 +690,11 @@
        "1        Liga Profesional Argentina 2017    S. Driussi         17   \n",
        "2        Liga Profesional Argentina 2017       J. Sand         15   \n",
        "3        Liga Profesional Argentina 2017     M. Pavone         13   \n",
-       "4        Liga Profesional Argentina 2017  Lucas Alario         12   \n",
+       "4        Liga Profesional Argentina 2017     I. Scocco         12   \n",
        "..                                   ...           ...        ...   \n",
        "75  Copa Liga Profesional Argentina 2023    M. Cóccaro          6   \n",
-       "76  Copa Liga Profesional Argentina 2023     S. Rondón          5   \n",
-       "77  Copa Liga Profesional Argentina 2023     S. Castro          5   \n",
+       "76  Copa Liga Profesional Argentina 2023     S. Castro          6   \n",
+       "77  Copa Liga Profesional Argentina 2023    M. Giménez          5   \n",
        "78  Copa Liga Profesional Argentina 2023  Tomás Galván          5   \n",
        "79  Copa Liga Profesional Argentina 2023   A. Martínez          5   \n",
        "\n",
@@ -704,18 +703,18 @@
        "1       River Plate  \n",
        "2             Lanús  \n",
        "3   Vélez Sarsfield  \n",
-       "4       River Plate  \n",
+       "4            Newell  \n",
        "..              ...  \n",
        "75       CA Huracán  \n",
-       "76      River Plate  \n",
-       "77  Vélez Sarsfield  \n",
+       "76  Vélez Sarsfield  \n",
+       "77    Independiente  \n",
        "78            Colón  \n",
        "79        Instituto  \n",
        "\n",
        "[80 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "id": "l8iQ8FPipFnO"
    },
@@ -820,47 +819,47 @@
        "    <tr>\n",
        "      <th>213</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
-       "      <td>San Lorenzo</td>\n",
-       "      <td>13</td>\n",
-       "      <td>9</td>\n",
-       "      <td>11</td>\n",
-       "      <td>15</td>\n",
+       "      <td>Sarmiento</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>214</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
-       "      <td>Defensa</td>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "      <td>13</td>\n",
+       "      <td>Unión Santa</td>\n",
        "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>215</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
-       "      <td>Unión Santa</td>\n",
-       "      <td>13</td>\n",
-       "      <td>9</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
+       "      <td>Defensa</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>216</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
        "      <td>Tigre</td>\n",
-       "      <td>13</td>\n",
+       "      <td>14</td>\n",
        "      <td>8</td>\n",
-       "      <td>12</td>\n",
+       "      <td>13</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>217</th>\n",
        "      <td>Copa Liga Profesional Argentina 2023</td>\n",
        "      <td>Lanús</td>\n",
-       "      <td>13</td>\n",
-       "      <td>8</td>\n",
-       "      <td>13</td>\n",
-       "      <td>11</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -875,16 +874,16 @@
        "3         Liga Profesional Argentina 2017   Racing Club  30  51  40     55\n",
        "4         Liga Profesional Argentina 2017      Banfield  30  42  35     54\n",
        "..                                    ...           ...  ..  ..  ..    ...\n",
-       "213  Copa Liga Profesional Argentina 2023   San Lorenzo  13   9  11     15\n",
-       "214  Copa Liga Profesional Argentina 2023       Defensa  13  12  13     14\n",
-       "215  Copa Liga Profesional Argentina 2023   Unión Santa  13   9  13     13\n",
-       "216  Copa Liga Profesional Argentina 2023         Tigre  13   8  12     13\n",
-       "217  Copa Liga Profesional Argentina 2023         Lanús  13   8  13     11\n",
+       "213  Copa Liga Profesional Argentina 2023     Sarmiento  14   8   8     16\n",
+       "214  Copa Liga Profesional Argentina 2023   Unión Santa  14  10  13     16\n",
+       "215  Copa Liga Profesional Argentina 2023       Defensa  14  12  16     14\n",
+       "216  Copa Liga Profesional Argentina 2023         Tigre  14   8  13     13\n",
+       "217  Copa Liga Profesional Argentina 2023         Lanús  14   9  14     12\n",
        "\n",
        "[218 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
